fix width on mobile strik list

--- a/src/index.css
+++ b/src/index.css
@@ -339,7 +339,7 @@ body {
   }
 
   .strikeChances {
-    width: 28%;
+    width: 40%;
     height: 8%;
     transform: translate(0%, 505%);
   }
